# daedalus-playground

./: .gitignore  CMakeLists.txt  README.md
Bruneton-Ocean/: CMakeLists.txt  Program.cpp  main.cpp
Bruneton-Ocean/data/: fftx.glsl  ffty.glsl  init.glsl  ocean.glsl
BulletPhysics-Cloth/: CMakeLists.txt  bullet_Cloth.cpp  geometry.h
BulletPhysics-PrimitiveShapes/: CMakeLists.txt  bullet_PrimitiveShapes.cpp  geometry.h
Dupuy-Whitecaps/: CMakeLists.txt  main.cpp
FastMassSpring/: CMakeLists.txt
FastMassSpring/config/: config.txt
FastMassSpring/scenes/: test_scene.xml
FastMassSpring/shaders/: frag.glsl  vert.glsl
FastMassSpring/source/: anttweakbar_wrapper.cpp  anttweakbar_wrapper.h  camera.cpp  camera.h  constraint.cpp  constraint.h  fps.cpp  global_headers.h  glsl_wrapper.cpp  glsl_wrapper.h  io_mesh.cpp  io_mesh.h  main.cpp  math_headers.cpp  math_headers.h  mesh.cpp  mesh.h  opengl_headers.h  primitive.cpp  primitive.h  scene.cpp  scene.h  simulation.cpp  simulation.h  stb_image.c  timer_wrapper.h
HuaminWang-Chebyshev/: CMakeLists.txt
HuaminWang-Chebyshev/CUDA_Projective_Armadillo/: ARMADILLO.h  OPENGL_DRIVER.h  kernel.cu
HuaminWang-Chebyshev/CUDA_Projective_Hammock/: HAMMOCK.h  OPENGL_DRIVER.h  kernel.cu
HuaminWang-Chebyshev/CUDA_Projective_Square/: CLOTHING.h  OPENGL_DRIVER.h  kernel.cu
HuaminWang-Chebyshev/data/: phong.frag  phong.vert  shadow.frag  shadow.vert
HuaminWang-Chebyshev/lib/: CUDA_PROJECTIVE_MESH.h  CUDA_PROJECTIVE_TET_MESH.h  DISTANCE.h  DYNAMIC_MESH.h  INTERSECTION.h  IO_FUNC.h  MESH.h  MY_GLSL.h  MY_MATH.h  PROJECTIVE_MESH.h  PROJECTIVE_TET_MESH.h  TET_MESH.h  TIMER.h
HuaminWang-DescentMethods/: CMakeLists.txt
HuaminWang-DescentMethods/CUDA_Hyperelastic_Armadillo/: ARMADILLO.h  OPENGL_DRIVER.h  kernel.cu
HuaminWang-DescentMethods/data/: shadow.frag
HuaminWang-DescentMethods/lib/: BMP_IO.h  CUDA_HYPER_TET_MESH.h  CUDA_MATH.h  DISTANCE.h  HYPER_TET_MESH.h  INTERSECTION.h  MESH.h  MY_GLSL.h  MY_MATH.h  TET_MESH.h  svd3_cuda.h
ImGui-GLFW/: CMakeLists.txt
ImGui-GLUT/: CMakeLists.txt  main.cpp
MilesMacklin-Sandbox/: CMakeLists.txt
MilesMacklin-Sandbox/core/: core.h  maths.h  mesh.cpp  radix.h  shader.h
MilesMacklin-Sandbox/projects/fog/: main.cpp
MilesMacklin-Sandbox/projects/granular2d/: cutil_math.h  solve.h  solvePBD.cpp  sort.cu
MilesMacklin-Sandbox/projects/granular3d/: main.cpp  shaders.cpp  sort.cu
MilesMacklin-Sandbox/projects/sh/: main.cpp
MilesMacklin-Sandbox/projects/smoke/: fluid3d.cpp
MilesMacklin-Sandbox/projects/springs/: main.cpp
RayTracingGems-VolumePT/: CMakeLists.txt  main.cpp
TDHoang-MRSSAO/: CMakeLists.txt  HighResolutionTimer.h  frame3d.cpp  frame3d.h  frameGrab.cpp  frameGrab.h  frameRate.cpp  frameRate.h  glm.h  helper.cpp  helper.h  main.cpp  math3d.cpp  math3d.h  readme.txt  shader.cpp  shader.h  textreader.cpp  textreader.h
TDHoang-MRSSAO/data/scn/: sponza.mtl
TDHoang-MRSSAO/data/shaders/: ao.frag  aoFirst.frag  aoLast.frag  blur.frag  downsample.frag  geometry.frag  geometry.vert  ortho.vert
TDHoang-MRSSAO/txt/: camera.txt
VincentHouze-Fluid/: CMakeLists.txt  main.cpp  nvMath.h  timer.cpp
VincentHouze-Fluid/CudaCommon/CudaFluidSolver3D/: fluid3D.cu  perlinKernel3d.cu  vhFluidSolver3D.cpp  vhFluidSolver3D.h
VincentHouze-Fluid/CudaCommon/CudaParticlesSystem/: perlinKernelParts.cu  vhParticlesKernels.cu  vhParticlesSystem.cpp  vhParticlesSystem.h
VincentHouze-Fluid/Utils/: GLSLProgram.cpp  cudaVbo.cpp  cudaVbo.h
WenzelJakob-Fluid/: CMakeLists.txt  Makefile  aabb.h  common.h  display.cpp  fsolver.cpp  fsolver.h  sphere.h  vector.h
Xian-GalerkinMG/: CMakeLists.txt
Xian-GalerkinMG/CUDA_Projective_Armadillo/: ARMADILLO.h  OPENGL_DRIVER.h  armadillo_float.state  clothing_target_float.state
Xian-GalerkinMG/data/: phong.frag  setting_octopus.txt
Xian-GalerkinMG/lib/: CUDA_PROJECTIVE_MESH.h  CUDA_PROJECTIVE_TET_MESH.h  MY_GLSL.h  TET_MESH.h
_libs/AntTweakBar/: CMakeLists.txt
_libs/bullet/: CMakeLists.txt
_libs/bullet/BulletCollision/: CMakeLists.txt
_libs/bullet/BulletDynamics/: CMakeLists.txt
_libs/bullet/BulletSoftBody/: CMakeLists.txt
_libs/bullet/LinearMath/: CMakeLists.txt
_libs/freeglut/: CMakeLists.txt
_libs/freeglut/GL/: freeglut_std.h
_libs/glew/: CMakeLists.txt
_libs/glfw/src/: CMakeLists.txt
_libs/imgui/: CMakeLists.txt
_libs/stb_image/: CMakeLists.txt
_libs/tinyxml/: CMakeLists.txt  tinyXmlTest.vcxproj  tinyXmlTestSTL.vcxproj  tinyxmlSTL.vcxproj  tinyxml_lib.vcxproj
_libs/tinyxml/DebugtinyxmlSTL/: tinyxmlSTL.bsc  tinyxmlSTL.idb  tinyxmlSTL.lib
_libs/tinyxml/DebugtinyxmlSTL/tinyxmlSTL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  bscmake.command.1.tlog  bscmake.read.1.tlog  bscmake.write.1.tlog  tinyxmlSTL.lastbuildstate
